--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>
         Hello, github pages!
     </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam qui cumque ipsam, optio dignissimos corporis nostrum tempore quod voluptas quia debitis nihil recusandae voluptatem vero exercitationem blanditiis iusto perspiciatis aspernatur!</p>
 </body>
 </html>
